Update header in three.html to include full name "Tejas T"

--- a/08_Events/three.html
+++ b/08_Events/three.html
@@ -6,11 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Tejas</h1>
+    <h1>Tejas T</h1>
     <button id="start">Start</button>
     <button id="stop">Stop</button>
 </body>
 <script>
+
     
 
     document.querySelector('#start').addEventListener('click',function(){
