--- a/08_Events/three.html
+++ b/08_Events/three.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Tejas T</h1>
+    <h1>Tejas</h1>
     <button id="start">Start</button>
     <button id="stop">Stop</button>
 </body>
