--- a/08_Events/three.html
+++ b/08_Events/three.html
@@ -24,9 +24,11 @@
     const intervalId = setInterval(sayDate, 1000,"hi")
     document.querySelector('#stop').addEventListener('click' ,function (){
     clearInterval(intervalId)
-    console.log("STOPPED")
+    console.log("STOP")
     })
     })
+
+
 
     
 </script>
